@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: pid.test,v 1.8.2.1 2003/10/07 18:53:23 dgp Exp $
+# RCS: @(#) $Id: pid.test,v 1.8.2.2 2004/02/25 23:38:17 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -33,7 +33,7 @@ test pid-1.2 {pid command} -constraints {unixOrPc unixExecs} -setup {
     set path(test1) [makeFile {} test1]
     file delete $path(test1)
 } -body {
-    set f [open [format {| echo foo | cat {>%s}} $path(test1)] w]
+    set f [open |[list echo foo | cat >$path(test1)] w]
     set pids [pid $f]
     close $f
     list [llength $pids] [regexp {^[0-9]+$} [lindex $pids 0]] \
